implement spring integration for scanning staging folder and moving ingest file to archive after job completion