@@ -1,50 +1,41 @@
 package com.yiuzg.flo.nem12.ingest.service.impl;
 
-import com.yiuzg.flo.nem12.ingest.dto.FileDto;
 import com.yiuzg.flo.nem12.ingest.service.FileArchiveService;
 import org.apache.commons.io.FileUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.http.codec.multipart.FilePart;
 import org.springframework.stereotype.Service;
-import reactor.core.publisher.Mono;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
+import java.nio.file.CopyOption;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.UUID;
+import java.nio.file.StandardCopyOption;
 
 @Service
-@ConditionalOnProperty(name = "flo.nem12.ingest.archive.target", havingValue = "file-system-local")
 public class LocalFileSystemFileArchiveServiceImpl implements FileArchiveService
 {
     private final String archiveLocation;
 
     @Autowired
     public LocalFileSystemFileArchiveServiceImpl(
-            @Value("${flo.nem12.ingest.archive.${flo.nem12.ingest.archive.target}.location}") String archiveLocation)
+            @Value("${flo.nem12.ingest.archive.file-system-local.location}") String archiveLocation,
+            @Value("${flo.nem12.ingest.archive.file-system-local.location.auto-create}") boolean autoCreateDirectory)
+            throws IOException
     {
         this.archiveLocation = archiveLocation;
+
+        if(autoCreateDirectory) {
+            Files.createDirectories(Path.of(archiveLocation).toAbsolutePath());
+        }
     }
 
     @Override
-    public Mono<FileDto> archive(FilePart file) throws IOException
+    public void archive(File file) throws IOException
     {
-        Path archive = Files.createFile(
-                Path.of(archiveLocation, UUID.randomUUID().toString()));
-        return file.transferTo(archive)
-                .thenReturn(new FileDto(file.filename(),
-                        archive.toAbsolutePath().toString()
-                ));
-    }
-
-    @Override
-    public InputStream retrieve(FileDto file) throws IOException
-    {
-        return Files.newInputStream(Paths.get(file.getObjectKey()));
+        Files.move(file.toPath().toAbsolutePath(), Path.of(archiveLocation, file.getName()),
+                StandardCopyOption.ATOMIC_MOVE,
+                StandardCopyOption.REPLACE_EXISTING);
     }
 }
